--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,9 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "cli": {
     "analytics": false,
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   },
   "version": 1,
   "newProjectRoot": "projects",
@@ -71,13 +73,7 @@
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
-              "namedChunks": true,
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.headless.ts"
-                }
-              ]
+              "namedChunks": true
             },
             "local-dev": {
               "buildOptimizer": false,
@@ -85,7 +81,13 @@
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
-              "namedChunks": true
+              "namedChunks": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.headless.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -145,6 +147,5 @@
         }
       }
     }
-  },
-  "defaultProject": "eshop-admin-ngweb"
+  }
 }
